--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@ Humidity: 30%
     </div>
   </div>
 </div>
+<p>
+    Github Repository Link: <a href= https://github.com/carynann/shecodes-project/blob/main/javahomework.html>
+</p>
 </section>
 <script>
 
