--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Humidity: 30%
   </div>
 </div>
 <p>
-    Github Repository Link: <a href= https://github.com/carynann/shecodes-project/blob/main/javahomework.html>
+    Github Repository <a href= "https://github.com/carynann/shecodes-project/blob/main/javahomework.html">Link</a>
 </p>
 </section>
 <script>
